@@ -100,6 +100,8 @@ Version 2.0-dev (CVS)
 - Fixed incorrect text justification returned by GetLabelStyleString()
   for TABTJRight (bug 2085)
 
+- Add EPSG/OGR name for New Zealand datums (GDAL #3187)
+
 
 Version 1.7.0-beta1 (2007-02-29)
 --------------------------------
@@ -961,5 +963,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.235 2009-07-30 13:13:43 dmorissette Exp $
+$Id: HISTORY.TXT,v 1.236 2009-10-15 16:16:37 fwarmerdam Exp $
 ------------
